Fixing the header and menu navigation bar --text-align

--- a/0x02-CSS_advanced/styles/28-style.css
+++ b/0x02-CSS_advanced/styles/28-style.css
@@ -302,6 +302,6 @@ ul.row{
 
 .header-logo a {
     display: var(--header-logo-link-display);
-    left: var(--header-logo-link-left);
+    text-align: var(--header-logo-link-left);
     top: var(--header-logo-link-top);
 }
